Fix formatting of old posts

--- a/gsoc14-progress-finished-refraction-at-planar-surface.html
+++ b/gsoc14-progress-finished-refraction-at-planar-surface.html
@@ -42,37 +42,13 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I&#8217;m sorry for this delayed post. I couldn&#8217;t work last week due to some
-other issues so had nothing much to report.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-This week I completed refraction function for planar surface, fixed some
-bugs and wrote tests for it. I also added a function to calculate angle
-of deviation. Details can be found on the following link
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-<https://github.com/sympy/sympy/pull/7626>
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I&#8217;m waiting for Sean to start reviewing this.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-My next priority is to complete a pending <span class="caps">PR</span> on mirrors.
-
-</div>
-
-<p></div>
-</p></p>
+</footer><!-- /.post-info -->      <p>I&#8217;m sorry for this delayed post. I couldn&#8217;t work last week due to some other issues so had nothing much to&nbsp;report.</p>
+<p>This week I completed refraction function for planar surface, fixed some bugs and wrote tests for it. I also added a function to calculate angle of deviation. Details can be found on the following&nbsp;link</p>
+<ul>
+<li>https://github.com/sympy/sympy/pull/7626</li>
+</ul>
+<p>I&#8217;m waiting for Sean to start reviewing&nbsp;this.</p>
+<p>My next priority is to complete a pending <span class="caps">PR</span> on&nbsp;mirrors.</p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
