--- a/gsoc14-progress-week-12.html
+++ b/gsoc14-progress-week-12.html
@@ -42,39 +42,14 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-
-<div dir="ltr" style="text-align: left;">
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Last week I worked on utility functions which has been merged into the
-master.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Currently I am working on converting my incopmlete <span class="caps">PR</span> related to
-geometrical optics in 3D into 2D. Creating these classes in 3D will make
-it difficult to use/extend. I referred to some books and I never saw use
-of too much 3D in their illustrations. Depending on the use cases we can
-consider adding it later after gsoc. As of now optics module can not be
-called complete and hence I&#8217;ll be working on it post gsoc.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Few other things which I would like to complete this week are as
-follows:
-
-</div>
-
+</footer><!-- /.post-info -->      <p>Last week I worked on utility functions which has been merged into the master.
+Currently I am working on converting my incopmlete <span class="caps">PR</span> related to geometrical optics in 3D into 2D. Creating these classes in 3D will make it difficult to use/extend. I referred to some books and I never saw use of too much 3D in their illustrations. Depending on the use cases we can consider adding it later after gsoc. As of now optics module can not be called complete and hence I&#8217;ll be working on it post&nbsp;gsoc.</p>
+<p>Few other things which I would like to complete this week are as&nbsp;follows:</p>
 <ul>
 <li>Interference</li>
 <li>Diffraction</li>
 <li>IPython notebooks for&nbsp;examples</li>
 </ul>
-<p></div>
-</div>
-</p></p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
