--- a/gsoc14-progress-week-6.html
+++ b/gsoc14-progress-week-6.html
@@ -42,54 +42,20 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/physics.html">physics</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-It was a busy week though I managed to do some work.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I&#8217;ve been working on following things:
-
-</div>
-
+</footer><!-- /.post-info -->      <p>It was a busy week though I managed to do some&nbsp;work.</p>
+<p>I&#8217;ve been working on following&nbsp;things:</p>
 <ul>
-<li>Integrating <code style="background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, 'Liberation Mono', Courier, monospace !important; font-size: 12px; padding: 3px 4px;">TWave</code> with <code style="background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, 'Liberation Mono', Courier, monospace !important; font-size: 12px; padding: 3px 4px;">refraction_angle</code>(<a href="https://github.com/sympy/sympy/pull/7626">7626</a>)</li>
+<li>Integrating <code>TWave</code> with <code>refraction_angle</code>(<a href="https://github.com/sympy/sympy/pull/7626">7626</a>)</li>
 <li>Interference&nbsp;class</li>
 </ul>
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Some blocking 3D geometry code got merged yesterday which gives me a lot
-of new things to work on. :-)
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I also tried to take a look on very
-old [patch](https://github.com/sympy/sympy/pull/1226) for `gaussopt`{style=&#8221;background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, &#8216;Liberation Mono&#8217;, Courier, monospace !important; font-size: 12px; padding: 3px 4px;&#8221;}.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-This week I wrote a script to update the development documentation when
-a <span class="caps">PR</span> gets merged into the master. This is up and running.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I passed mid term evaluation that took place last week and I would like
-to
-thank [Sean](https://github.com/flacjacket), [Ondrej](https://github.com/certik),[Aaron](https://github.com/asmeurer) and [Chris](https://github.com/smichr) for
-their constant support.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-That&#8217;s all for now. *Cheers!*
-
-</div>
-
-<p></div>
-</p></p>
+<p>Some blocking 3D geometry code got merged yesterday which gives me a lot
+of new things to work on.&nbsp;:)</p>
+<p>I also tried to take a look on very old <a href="https://github.com/sympy/sympy/pull/1226">patch</a> for <code>gaussopt</code>.</p>
+<p>This week I wrote a script to update the development documentation when
+a <span class="caps">PR</span> gets merged into the master. This is up and&nbsp;running.</p>
+<p>I passed mid term evaluation that took place last week and I would like to
+thank <a href="https://github.com/flacjacket">Sean</a>, <a href="https://github.com/certik">Ondrej</a>,<a href="https://github.com/asmeurer">Aaron</a> and <a href="https://github.com/smichr">Chris</a> for their constant&nbsp;support.</p>
+<p>That&#8217;s all for&nbsp;now. Cheers!</p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
