--- a/gsoc14-week-10-adding-more-to-utils.html
+++ b/gsoc14-week-10-adding-more-to-utils.html
@@ -42,47 +42,14 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-This week I worked on adding more utility function in optics. Some of
-them are yet to be added. I&#8217;ll send a pull request once I write tests
-for them.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Here&#8217;s the link to the code pushed till now:
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-<https://github.com/debugger22/sympy/compare/util-funcs>
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I also worked on one of my pending
-<span class="caps">PR</span>(<https://github.com/sympy/sympy/pull/7686>) parameterizing a 3D
-circle. This will make the implementation a bit easier.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Tomorrow I&#8217;ll be going back to college.
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-That&#8217;s all for now. Cheers!
-
-</div>
-
-<div style="color: #444444; font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-
-</div>
-
-<p></div>
-</p></p>
+</footer><!-- /.post-info -->      <p>This week I worked on adding more utility function in optics. Some of them are yet to be added. I&#8217;ll send a pull request once I write tests for&nbsp;them.</p>
+<p>Here&#8217;s the link to the code pushed till&nbsp;now:</p>
+<ul>
+<li>https://github.com/debugger22/sympy/compare/util-funcs</li>
+</ul>
+<p>I also worked on one of my pending <span class="caps">PR</span>(<a href="https://github.com/sympy/sympy/pull/7686">https://github.com/sympy/sympy/pull/7686</a>) parameterizing a 3D circle. This will make the implementation a bit&nbsp;easier.</p>
+<p>Tomorrow I&#8217;ll be going back to&nbsp;college.</p>
+<p>That&#8217;s all for now.&nbsp;Cheers!</p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
