--- a/gsoc-14-first-week.html
+++ b/gsoc-14-first-week.html
@@ -42,54 +42,20 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/physics.html">physics</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-The first week of GSoC is going to end very soon. I started working very
+</footer><!-- /.post-info -->      <p>The first week of GSoC is going to end very soon. I started working very
 late this week because of some issues. I spent most of my time in
-reading books on optics.
-
-</div>
-
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-Due to a dependency for 3D geometry, which will take some more time, I
+reading books on&nbsp;optics.</p>
+<p>Due to a dependency for 3D geometry, which will take some more time, I
 changed my timeline from what I had proposed. Besides starting with
-geometrical optics(3 weeks), I have started working on wave optics.
-
-</div>
-
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-This is what my proposal says:
-
-</div>
-
-<blockquote>
+geometrical optics(3 weeks), I have started working on wave&nbsp;optics.</p>
+<p>This is what my proposal&nbsp;says:</p>
 <ul>
-<li>During this week I&#8217;ll write code for classical wave equation and
-    simple harmonic&nbsp;motion.</li>
-<li>Introduction of properties like phase angles, phase velocity, wave
-    velocity, amplitude, intensity, frequency and&nbsp;wavelength. </li>
+<li>During this week I&#8217;ll write code for classical wave equation and simple harmonic&nbsp;motion.</li>
+<li>Introduction of properties like phase angles, phase velocity, wave velocity, amplitude, intensity, frequency and&nbsp;wavelength. </li>
 </ul>
-</blockquote>
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-[This](https://github.com/sympy/sympy/pull/7518) is my first pull
-request regarding my project (Thanks to Sean for the quick review). Till
-now I&#8217;ve only added a transverse wave class and will add more to it in
-the next 2 days.
-
-</div>
-
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-There were no hiccups yet!
-
-</div>
-
-<div style="color: #333333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 1.3em; margin-bottom: 1.2em;">
-<span style="line-height: 1.3em;">Cheers!</span>
-
-</div>
-
-<p></div>
-</p></p>
+<p><a href="https://github.com/sympy/sympy/pull/7518">This</a> is my first pull request regarding my project (Thanks to Sean for the quick review). Till now I&#8217;ve only added a transverse wave class and will add more to it in the next 2&nbsp;days.</p>
+<p>There were no hiccups&nbsp;yet!</p>
+<p>Cheers!</p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
