--- a/gsoc-2014-with-sympy.html
+++ b/gsoc-2014-with-sympy.html
@@ -42,22 +42,11 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="text-align: left;">
-
-My proposal is intended to add more to optics in SymPy. Till now it can
+</footer><!-- /.post-info -->      <p>My proposal is intended to add more to optics in SymPy. Till now it can
 only do computations related to Gaussian optics and a bit of geometrical
-optics. [Ondřej Čertík](https://github.com/certik) and [Sean
-Vig](https://github.com/flacjacket) are my mentors for the project.
-
-</div>
-
-<div style="text-align: left;">
-
-</div>
-
-<div style="text-align: left;">
-For those who don&#8217;t know what is SymPy, SymPy is a Python library for
+optics. <a href="https://github.com/certik">Ondřej Čertík</a> and <a href="https://github.com/flacjacket">Sean
+Vig</a> are my mentors for the&nbsp;project.</p>
+<p>For those who don&#8217;t know what is SymPy, SymPy is a Python library for
 symbolic computation. It provides computer algebra capabilities either
 as a standalone application, as a library to other applications, or live
 on the web as SymPy Live. SymPy is trivial to install and to inspect
@@ -66,27 +55,14 @@ any additional libraries. This ease of access combined with a simple and
 extensible code base in a well known language make SymPy a computer
 algebra system with a relatively low barrier to entry. SymPy is free
 software and is licensed under New <span class="caps">BSD</span> license. The lead developers are
-Ondřej Čertík and Aaron Meurer.
-
-</div>
-
-<div style="text-align: left;">
-
-</div>
-
-<div style="text-align: left;">
-Three more people other than me got selected for SymPy from my college,
-namely, Akshay, Sachin Joglekar and Soumya Dipta Biswas.
-
-</div>
-
-<p>During this <em>Community Bonding Period</em>I&#8217;ll try to get familiar with the
+Ondřej Čertík and Aaron&nbsp;Meurer.</p>
+<p>Three more people other than me got selected for SymPy from my college,
+namely, Akshay, Sachin Joglekar and Soumya Dipta&nbsp;Biswas.</p>
+<p>During this <em>Community Bonding Period</em> I&#8217;ll try to get familiar with the
 huge code base of SymPy and its community of developers. I&#8217;m also
-working on few old pull requests that are dead for so&nbsp;long.  </p>
+working on few old pull requests that are dead for so&nbsp;long.</p>
 <p>Looking forward to work with such a great organization! Thanks to Google
 and SymPy for this&nbsp;opportunity!</p>
-<p></div>
-</p></p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
