--- a/gsoc14-progress-week-5.html
+++ b/gsoc14-progress-week-5.html
@@ -42,60 +42,33 @@
         </address>
 <p>In <a href="http://www.sudhanshumishra.in/category/gsoc.html">GSoC</a>. </p>
 <p>tags: <a href="http://www.sudhanshumishra.in/tag/gsoc.html">gsoc</a> <a href="http://www.sudhanshumishra.in/tag/physics.html">physics</a> <a href="http://www.sudhanshumishra.in/tag/sympy.html">sympy</a> </p>
-</footer><!-- /.post-info -->      <div dir="ltr" style="text-align: left;">
-<div style="font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I did good amount of work this week. I sent a small part of it related
-to ray tracing for review.
-
-</div>
-
+</footer><!-- /.post-info -->      <p>I did good amount of work this week. I sent a small part of it related
+to ray tracing for&nbsp;review.</p>
 <ul>
-<li><a href="https://github.com/sympy/sympy/pull/7626">https://github.com/sympy/sympy/pull/7626</a></li>
+<li>https://github.com/sympy/sympy/pull/7626</li>
 </ul>
-<div style="font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I got some great suggestions from Sean to make it compatible directly
-with<span style="color: #444444;"> </span>`TWave`{style=&#8221;background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, &#8216;Liberation Mono&#8217;, Courier, monospace !important; font-size: 12px; padding: 3px 4px;&#8221;}<span style="color: #444444;"> </span>class.
-It is a <span class="caps">WIP</span> as I&#8217;m waiting for few 3D geometry classes. I&#8217;m also working
+<p>I got some great suggestions from Sean to make it compatible directly
+with<code>TWave</code> class.</p>
+<p>It is a <span class="caps">WIP</span> as I&#8217;m waiting for few 3D geometry classes. I&#8217;m also working
 on inteference of light waves and I hope that I&#8217;ll send it for review in
 next couple of days. My last <span class="caps">PR</span> on medium is still unmerged and I really
-need it to be in master to work on more implementations.
-
-</div>
-
-<div style="font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-I&#8217;m also trying to
-move<span style="color: #444444;"> </span>`physics/gaussopt`{style=&#8221;background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, &#8216;Liberation Mono&#8217;, Courier, monospace !important; font-size: 12px; padding: 3px 4px;&#8221;}<span style="color: #444444;"> </span>to<span style="color: #444444;"> </span>`physics/optics/gaussopt`{style=&#8221;background-color: #f7f7f9; border-bottom-left-radius: 3px; border-bottom-right-radius: 3px; border-top-left-radius: 3px; border-top-right-radius: 3px; border: 1px solid rgb(225, 225, 232); color: #dd1144; font-family: Consolas, &#8216;Liberation Mono&#8217;, Courier, monospace !important; font-size: 12px; padding: 3px 4px;&#8221;}<span style="color: #444444;"> </span>as
-it&#8217;ll be good to keep things related to optics at the same place. I&#8217;m
-waiting for opinion of the community about it. Here&#8217;s the link to that
-<span class="caps">PR</span>:
-
-</div>
-
+need it to be in master to work on more&nbsp;implementations.</p>
+<p>I&#8217;m also trying to move <code>physics/gaussopt</code> to <code>physics/optics/gaussopt</code> as it&#8217;ll be good to keep things related to optics at the same place. I&#8217;m waiting for opinion of the community about it. Here&#8217;s the link to that
+<span class="caps">PR</span>:</p>
 <ul>
-<li><a href="https://github.com/sympy/sympy/pull/7607">https://github.com/sympy/sympy/pull/7607</a></li>
+<li>https://github.com/sympy/sympy/pull/7607</li>
 </ul>
-<div style="font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-Here is some other minor work that I&#8217;ve done this week outside of
-optics:
-
-</div>
-
+<p>Here is some other minor work that I&#8217;ve done this week outside of&nbsp;optics:</p>
 <ul>
-<li><a href="https://github.com/sympy/sympy/pull/7609">https://github.com/sympy/sympy/pull/7609</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7610">https://github.com/sympy/sympy/pull/7610</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7612">https://github.com/sympy/sympy/pull/7612</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7614">https://github.com/sympy/sympy/pull/7614</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7627">https://github.com/sympy/sympy/pull/7627</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7628">https://github.com/sympy/sympy/pull/7628</a></li>
-<li><a href="https://github.com/sympy/sympy/pull/7629">https://github.com/sympy/sympy/pull/7629</a></li>
+<li>https://github.com/sympy/sympy/pull/7609</li>
+<li>https://github.com/sympy/sympy/pull/7610</li>
+<li>https://github.com/sympy/sympy/pull/7612</li>
+<li>https://github.com/sympy/sympy/pull/7614</li>
+<li>https://github.com/sympy/sympy/pull/7627</li>
+<li>https://github.com/sympy/sympy/pull/7628</li>
+<li>https://github.com/sympy/sympy/pull/7629</li>
 </ul>
-<div style="font-family: Arvo, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 13px; line-height: 18px; margin-bottom: 9px;">
-That&#8217;s all for now. *Cheers!*
-
-</div>
-
-<p></div>
-</p></p>
+<p>That&#8217;s all for&nbsp;now. Cheers!</p>
     </div><!-- /.entry-content -->
     <div class="comments">
       <h2>Comments !</h2>
