Fix formatting of old posts

--- a/gsoc14-progress-finishing-twave.html
+++ b/gsoc14-progress-finishing-twave.html
@@ -65,7 +65,8 @@ n : Sympifyable    Refractive index of the medium.
 <span class="gh">Raises</span>
 <span class="gh">=======</span>
 
-ValueError : When niether frequency nor time period is provided or they are not consistent.TypeError : When anyting other than TWave objects is added.
+ValueError : When niether frequency nor time period is provided or they are not consistent.
+TypeError : When anyting other than TWave objects is added.
 
 <span class="gh">Methods</span>
 <span class="gh">=======</span>
